# TigerC

./: .gitignore  Cargo.toml  readme.md
src/: cursor.rs  (+3 more)
tigerc/: Cargo.toml
tigerc/src/: amd64.rs  asm.rs  asm_gen.rs  ast.rs  canon.rs  cursor.rs  data_layout.rs  escape.rs  flow.rs  frame.rs  graph.rs  ident_pool.rs  ir.rs  ir_gen.rs  lib.rs  liveness.rs  main.rs  parser.rs  reg_alloc.rs  stack.rs  symbol_table.rs  temp.rs  tokenizer.rs  translate.rs  type_ast.rs  type_inference.rs
tigerc/tests/: test_compile.rs  test_parser.rs  test_tokenizer.rs
tigerc/tests/snapshots/: test_compile__compile_merge.snap  test_compile__compile_merge.snap.new  test_compile__compile_queens.snap  test_compile__compile_queens.snap.new  test_compile__test__compile1.snap  test_compile__test__compile2.snap  test_parser__parse_merge.snap  test_parser__parse_queens.snap  test_parser__parse_test1.snap  test_parser__parse_test10.snap  test_parser__parse_test11.snap  test_parser__parse_test12.snap  test_parser__parse_test13.snap  test_parser__parse_test14.snap  test_parser__parse_test15.snap  test_parser__parse_test16.snap  test_parser__parse_test17.snap  test_parser__parse_test18.snap  test_parser__parse_test19.snap  test_parser__parse_test2.snap  test_parser__parse_test20.snap  test_parser__parse_test21.snap  test_parser__parse_test22.snap  test_parser__parse_test23.snap  test_parser__parse_test24.snap  test_parser__parse_test25.snap  test_parser__parse_test26.snap  test_parser__parse_test27.snap  test_parser__parse_test28.snap  test_parser__parse_test29.snap  test_parser__parse_test3.snap  (+77 more)
(+12 files in other folders)
